<resources>
    <!-- General -->
    <string name="app_name">Iris Msg</string>
    <string name="quotify">"%1$s"</string>
    <string name="body_no_results">Nothing to show</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="more_text_format">%1$d…</string>


    <!-- Menu Actions -->
    <string name="action_even_more">About Iris Msg</string>
    <string name="action_open_lab">About Open Lab</string>
    <string name="action_app_info">App Info</string>
    <string name="action_logout">Log out</string>
    <string name="action_login">Get started!</string>
    <string name="action_delete_organisation">Delete organisation</string>


    <!-- Organisation List Activity -->
    <string name="tab_coordinator">Organisations</string>
    <string name="tab_donor">Donations</string>


    <!-- Empty Main Activity -->
    <string name="body_no_network">We cannot connect to Iris Msg right now, please check your network connection and try again.</string>
    <string name="action_retry_network">Try again</string>


    <!-- Login Activity -->
    <string name="title_activity_login">Getting Started</string>
    <string name="prompt_phone_number">Phone Number</string>
    <string name="prompt_country_code">Country Code</string>
    <string name="prompt_verification_code">Verification Code</string>
    <string name="prompt_member_label">Friendly name</string>
    <string name="action_login_request">Lets go!</string>
    <string name="action_login_check">Submit</string>
    <string name="error_invalid_phone_number">This phone number is invalid</string>
    <string name="error_invalid_country_code">This country code is invalid</string>
    <string name="error_invalid_verification_code">This code is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_info">
        We use your phone number to check who you are.
        You will receive a 6 digit code to ensure you entered the correct number.
    </string>
    <string name="login_code_sent">Code sent to %1$s</string>
    <string name="login_terms">
        By tapping you are agreeing to our
        <a href="http://irismsg.io/terms">terms of use</a>
        and
        <a href="http://irismsg.io/privacy">privacy policy</a>
    </string>

    <string name="api_unknown_error">An unknown error occurred, please try again.</string>


    <!-- Onboard Activity -->
    <string name="title_activity_onboard">Welcome to Iris Msg</string>
    <string name="body_permissions_required">Sorry, you cannot use this app unless you accept the permissions</string>
    <string name="onboard_slide_1">Iris Msg lets you get your message out when you don\'t have enough SMS credit.</string>
    <string name="onboard_slide_2">Your message is distributed between your invited donors using their data plan.</string>
    <string name="onboard_slide_3">Donors can then choose to donate their SMS to forward on the message.</string>
    <string name="onboard_slide_4">Subscribers receive the message like any other SMS.</string>
    <string name="onboard_slide_5">For this to work we need your permission to send SMS on your behalf, see when they are sent and read your contacts so you can send invites.</string>


    <!-- Organisation List -->
    <string name="title_activity_organisation_list">Iris Msg</string>
    <string name="title_undonate">Stop Donation</string>
    <string name="body_undonate">Are you sure you want to stop this donation? If you change your mind, you will have to be invited again.</string>
    <string name="error_undonate">Failed to remove your donation, please try again</string>
    <string name="success_undonate">Your donation has been stopped</string>

    <string name="title_new_app_update">A new update is available</string>
    <string name="body_new_app_update">Update your app to get the latest features and fixes</string>
    <string name="action_update_app">Update</string>
    <string name="action_skip_update">Not now</string>
    <string name="action_check_for_update">Check for update</string>
    <string name="title_app_info">App information</string>

    <string name="title_no_update">Latest version</string>
    <string name="body_no_update">You\'re on the latest version!</string>


    <!-- Add Organisation -->
    <string name="title_activity_add_organisation">Create Organisation</string>
    <string name="add_organisation_info">An organisation is a group of donors and subscribers that you use to send messages through.</string>
    <string name="prompt_organisation_name">Name</string>
    <string name="prompt_organisation_info">Info</string>
    <string name="action_add_organisation">Create</string>
    <string name="error_invalid_name">This name is not long enough</string>
    <string name="error_invalid_info">This info is not long enough</string>


    <!-- Organisation Detail Activity -->
    <string name="title_activity_organisation_detail">Organisation Detail</string>
    <string name="tab_messaging">Messages</string>
    <string name="tab_org_donors">Donors</string>
    <string name="tab_org_subscribers">Subscribers</string>
    <string name="title_confirm_delete_org">Remove organisation</string>
    <string name="body_confirm_delete_org">Are you sure you want to delete this organisation? This action cannot be undone</string>
    <string name="title_confirm_delete_member">Remove %1$s</string>

    <string name="title_add_member">Add a %1$s</string>
    <string name="body_confirm_delete_member">Are you sure you want to remove this member from your organisation?</string>
    <string name="body_add_subscriber">
        Add a subscriber to your organisation to receive messages through your donor network.
        You MUST have their permission and consent to share their personal data (phone number) with the donors in your organisation.
        Donors will see their phone number when donating their SMS.
    </string>
    <string name="body_add_donor">
        Add a donor to your organisation who can donate their unused SMS to forward along your messages.
        They MUST be someone you trust as they will be handling the personal data (phone numbers) of your subscribers.
    </string>
    <string name="member_created">%1$s invited!</string>
    <string name="member_deleted">%1$s was removed</string>

    <string name="action_delete">Remove</string>
    <string name="action_confirm">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_send">Send</string>
    <string name="action_add_from_contacts">From contacts</string>
    <string name="action_add_manually">Enter number</string>

    <string name="prompt_message">Message</string>
    <string name="body_send_message_bottom">
        Send a message to your organisation through it\'s donors.
        \n\nDonors will receive a notification where they have the option to forward the message on to subscribers.
        \n\nIf a donor cannot donate, another donor will be asked instead.
    </string>
    <string name="message_char_count">%1$d/%2$d</string>
    <string name="message_sent">Message sent!</string>

    <string name="body_member_phone_number_self">(you)</string>
    <string name="body_member_list_format">%1$s – %2$s</string>

    <string name="body_donors_description">These are your donors, they choose to donate their SMS to forward your messages.</string>
    <string name="body_subscribers_description">These are your subscribers who receive the messages you send to this organisation.</string>

    <string name="err_orgs_destroy">Failed to delete organisation, please try again</string>
    <string name="err_members_destroy">Failed to remove member, please try again</string>
    <string name="err_members_create">Failed to add member, please try again</string>
    <string name="err_messages_create">Failed to create message, please try again</string>


    <!-- Donate Activity -->
    <string name="title_donate_activity">Donate Sms</string>
    <string name="action_donate">Donate</string>
    <string name="body_no_donations">You don\'t have any pending donations,\ngood work!</string>
    <string name="label_fraction">%1$d/%2$d</string>
    <string name="body_donations_sent">Your donations have been sent, thank you!</string>
    <string name="body_donation_progress">Sending donations (%1$d left)</string>
    <string name="warn_different_locale">Warning: Foreign SMS (%1$s), carrier charges may apply.</string>
    <string name="body_donation_failed">Failed to donate messages, please try again</string>


    <!-- Accept Role -->
    <string name="title_activity_accept_role">Accept Invitation</string>
    <string name="body_donor_role_info">
        You have been invited to donate to %1$s on irismsg.io. This means you can donate your spare sms to forward messages for this organisation.
        \n\nWhen this organisation sends a message you will receive a notification to contribute towards delivering it. It will contain a suggested donation based on the number of donors the organisation has.
    </string>
    <string name="action_accept_donor_invite">Become a donor</string>


    <!-- Preferences -->
    <string name="pref_api_mode">App Mode</string>
    <string name="pref_api_mode_info">How the app operates</string>
    <string name="pref_api_host">Api Location</string>
    <string name="pref_api_host_info">The url of where the api is</string>


    <!-- Notifications -->
    <string name="title_new_donations_notif">New donations!</string>
    <string name="body_new_donations_notif">Your organisations need your help</string>
    <string name="title_new_donations_channel">New Donations</string>
    <string name="info_new_donations_channel">New Donations</string>

</resources>
