<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="uk.ac.ncl.openlab.irismsg.activity.OrganisationListActivity">

    <item android:id="@+id/action_donate"
        android:title="@string/action_donate"
        android:icon="@drawable/ic_donate_white_48dp"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_even_more"
        android:title="@string/action_even_more"
        app:showAsAction="never" />

    <item android:id="@+id/action_open_lab"
        android:title="@string/action_open_lab"
        app:showAsAction="never" />

    <item android:id="@+id/action_app_info"
        android:title="@string/action_app_info"
        app:showAsAction="never" />

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never" />

</menu>