<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".activity.EmptyMainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            app:title="@string/app_name"
            tools:layout_conversion_absoluteHeight="56dp"
            tools:layout_conversion_absoluteWidth="384dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="8dp" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/retry_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/app_content_margin"
        android:layout_marginRight="@dimen/app_content_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/network_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/app_content_margin"
            android:paddingTop="@dimen/app_content_margin"
            android:text="@string/body_no_network"
            android:textAppearance="@style/AppTheme.AltText" />

        <Button
            android:id="@+id/try_again"
            style="@style/AppTheme.PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_retry_network" />
    </LinearLayout>
</LinearLayout>