<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/fake_focusable"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/app_content_margin"
        android:layout_marginLeft="@dimen/app_content_margin"
        android:layout_marginRight="@dimen/app_content_margin"
        android:layout_marginStart="@dimen/app_content_margin"
        android:layout_marginTop="@dimen/app_content_padding">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_message"
            android:inputType="textCapSentences|textMultiLine" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/char_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/app_content_margin"
        android:layout_marginLeft="@dimen/app_content_margin"
        android:layout_marginRight="@dimen/app_content_margin"
        android:layout_marginStart="@dimen/app_content_margin"
        android:layout_marginTop="@dimen/app_content_padding"
        android:textAlignment="textEnd"
        android:gravity="end"
        tools:text="42/140"/>

    <Button
        android:id="@+id/send_button"
        style="@style/AppTheme.PrimaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/app_content_padding"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:drawableEnd="@drawable/ic_send_white_24dp"
        android:drawableRight="@drawable/ic_send_white_24dp"
        android:drawablePadding="8dp"
        android:text="@string/action_send" />

    <TextView
        android:id="@+id/info_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/body_send_message_bottom"
        android:layout_marginEnd="@dimen/app_content_margin"
        android:layout_marginLeft="@dimen/app_content_margin"
        android:layout_marginRight="@dimen/app_content_margin"
        android:layout_marginStart="@dimen/app_content_margin"
        android:layout_marginTop="@dimen/app_content_padding" />

</LinearLayout>