<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:toolbarId="@+id/toolbar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/app_content_margin"
            android:orientation="vertical"
            tools:context=".activity.AcceptRoleActivity">

            <TextView
                android:id="@+id/api_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/AppTheme.ErrorText"
                tools:text="Something went wrong!" />

            <ProgressBar
                android:id="@+id/api_progress"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/accept_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/org_frag"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/org_border"
                        android:layout_width="4dp"
                        android:layout_height="fill_parent"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:background="@color/colorPrimary" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/org_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4sp"
                            android:layout_weight="1"
                            android:textAppearance="@style/AppTheme.TitleLabel"
                            tools:text="Top Hat Notifications" />

                        <TextView
                            android:id="@+id/org_info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4sp"
                            android:layout_weight="1"
                            android:textAppearance="@style/AppTheme.BodyText"
                            tools:text="The latest and best top hat finds notifications" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/role_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginBottom="@dimen/text_margin"
                    tools:text="@string/body_donor_role_info" />

                <Button
                    android:id="@+id/accept_button"
                    style="@style/AppTheme.PrimaryButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/text_margin"
                    android:text="@string/action_accept_donor_invite" />

                <TextView
                    android:id="@+id/terms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/text_margin"
                    android:text="@string/login_terms" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>